--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "grunt-contrib-imagemin": "^3.1.0",
     "img-loader": "^3.0.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
