--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint",
     "analyze": "vue-cli-service build --mode analyze",
     "new:comp": "node ./scripts/generateComponent",
-    "new:view": "node ./scripts/generateView"
+    "new:view": "node ./scripts/generateView",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "axios": "^0.18.0",
