--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "grunt-contrib-imagemin": "^3.1.0",
+    "highlight.js": "^9.15.8",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-pngquant": "^7.0.0",
     "img-loader": "^3.0.1",
@@ -39,6 +40,8 @@
     "less-loader": "^4.1.0",
     "postcss-pxtorem": "^4.0.1",
     "svg-sprite-loader": "^4.1.6",
+    "vue-highlight.js": "^3.1.0",
+    "vue-svgicon": "^3.2.6",
     "vue-template-compiler": "^2.5.21",
     "webpack-bundle-analyzer": "^3.3.2"
   }
